# kaede

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  docker-run.sh  flake.nix  install.py
.github/workflows/: ci-docs-install.yml  ci-linux.yml  ci-macos.yml  ci-nix-linux.yml  ci-nix-macos.yml  deploy-docs.yml  test.yml
compiler/ast/: Cargo.toml
compiler/ast/src/: expr.rs  lib.rs  stmt.rs  top.rs
compiler/ast_type/: Cargo.toml
compiler/ast_type/src/: lib.rs
compiler/codegen/: Cargo.toml
compiler/codegen/src/: error.rs  expr.rs  lib.rs  mangle.rs  stmt.rs  tcx.rs  tests.rs  top.rs  value.rs
compiler/common/: Cargo.toml
compiler/common/src/: lib.rs
compiler/driver/: Cargo.toml
compiler/driver/src/: build.rs  main.rs  manifest.rs  new.rs  run.rs
compiler/driver/tests/: assert.rs  bytes.rs  cli.rs  cli_args.rs  cmp.rs  fs.rs  http_runtime.rs  http_static.rs  http_websocket.rs  import.rs  leak.rs  run.rs  runtime_channel.rs  runtime_init.rs  runtime_netpoll.rs  runtime_select.rs  runtime_stack_overflow.rs  slice.rs
compiler/ir/: Cargo.toml
compiler/ir/src/: expr.rs  lib.rs  module_path.rs  qualified_symbol.rs  stmt.rs  top.rs  ty.rs
compiler/ir_type/: Cargo.toml
compiler/ir_type/src/: lib.rs  module_path.rs  qualified_symbol.rs
compiler/lex/: Cargo.toml
compiler/lex/src/: cursor.rs  lib.rs  semi.rs  tests.rs  token.rs
compiler/lsp/: Cargo.toml
compiler/lsp/src/: lib.rs
compiler/monomorphize/: Cargo.toml
compiler/monomorphize/src/: lib.rs
compiler/parse/: Cargo.toml
compiler/parse/src/: error.rs  expr.rs  lib.rs  stmt.rs  top.rs  ty.rs
compiler/parse/tests/: channel_syntax.rs  fn_call_args.rs  interface_decl.rs  multiline_lists.rs  select_syntax.rs
compiler/semantic/: Cargo.toml
compiler/semantic/src/: const_eval.rs  context.rs  error.rs  expr.rs  lib.rs  mangle.rs  rust_import.rs  stmt.rs  subst.rs  symbol_table.rs  top.rs  ty.rs
compiler/semantic/tests/: expr.rs  import.rs  regression_lazy_impl_comment_app_pattern.kd  regression_lazy_impl_retain_then_try_send.kd  regression_lazy_impl_try_send_only.kd  stmt.rs  top.rs
compiler/semantic/tests/common/: mod.rs
compiler/span/: Cargo.toml
compiler/span/src/: file.rs  lib.rs
compiler/symbol/: Cargo.toml
compiler/symbol/src/: lib.rs
compiler/symbol_table/: Cargo.toml
compiler/symbol_table/src/: error.rs  lib.rs
compiler/type_infer/: Cargo.toml
compiler/type_infer/src/: context.rs  env.rs  error.rs  lib.rs  sample.rs
editors/vscode/: README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
example/calculator/: Kaede.toml  main.kd  parse.kd  tokenize.kd
example/comment_app/: Dockerfile  Kaede.toml  README.md
example/comment_server/: README.md
example/database/: Kaede.toml
example/http_kv_store/: Kaede.toml
example/http_server/: Kaede.toml
example/kaede-rust-bridge-example/: .gitignore
example/kaede-rust-bridge-examplea/rust/: Cargo.toml  build.rs
example/rust_interop/: Kaede.toml
packaging/homebrew/: README.md  kaede.rb
runtime/: __init__.py
runtime/core/: args.kd  io.kd  mem.kd
runtime/io/: io.h
runtime/mem/: mem.c  mem.h
runtime/sys/: sys.c  sys.h
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/docs/: examples.md  intro.md
(+58 files in other folders)
