[package]
name = "kaede_ir"
version = "0.1.0"
edition = "2021"

license = "MIT OR Apache-2.0"
[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm17-0"] }

kaede_ast_type = { path = "../ast_type" }
kaede_symbol = { path = "../symbol" }
kaede_span = { path = "../span" }
kaede_common = { path = "../common" }
