[package]
name = "kaede_lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
tower-lsp = "0.20.0"
tokio = { version = "=1.32.0", features = ["io-std", "rt-multi-thread", "sync"] }

kaede_parse = { path = "../parse" }
kaede_semantic = { path = "../semantic" }
kaede_span = { path = "../span" }
kaede_type_infer = { path = "../type_infer" }
