[package]
name = "kaede_type_infer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.68"
thiserror = "1.0.38"

kaede_span = { path = "../span" }
kaede_ir = { path = "../ir" }
kaede_symbol = { path = "../symbol" }
kaede_symbol_table = { path = "../symbol_table" }

[dev-dependencies]
kaede_common = { path = "../common" }
