[lib]
crate-type = ["cdylib"]

[package]
name = "kaede-rust-bridge-example"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
kaede-rust-bridge-codegen = { path = "/home/user/.kaede/kaede-rust-bridge-codegen" }

[workspace]
